--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,16 @@
 {% extends "layout.html" %}
 {% block content %}
 <h3>반갑습니다!</h3>
+<img src="https://gateway.ipfs.io/ipfs/QmWUYkiCYNbcCUy7JkR4ruZM8Ja6rJEVCKhVJZi5nKsyWZ">
+<img src="https://gateway.ipfs.io/ipfs/QmWUYkiCYNbcCUy7JkR4ruZM8Ja6rJEVCKhVJZi5nKsyWZ">
+<img src="https://gateway.ipfs.io/ipfs/QmWUYkiCYNbcCUy7JkR4ruZM8Ja6rJEVCKhVJZi5nKsyWZ">
+<img src="https://gateway.ipfs.io/ipfs/QmWUYkiCYNbcCUy7JkR4ruZM8Ja6rJEVCKhVJZi5nKsyWZ">
+<img src="https://gateway.ipfs.io/ipfs/QmWUYkiCYNbcCUy7JkR4ruZM8Ja6rJEVCKhVJZi5nKsyWZ">
+<img src="https://gateway.ipfs.io/ipfs/QmWUYkiCYNbcCUy7JkR4ruZM8Ja6rJEVCKhVJZi5nKsyWZ">
+<img src="https://gateway.ipfs.io/ipfs/QmWUYkiCYNbcCUy7JkR4ruZM8Ja6rJEVCKhVJZi5nKsyWZ">
+<img src="https://gateway.ipfs.io/ipfs/QmWUYkiCYNbcCUy7JkR4ruZM8Ja6rJEVCKhVJZi5nKsyWZ">
+<img src="https://gateway.ipfs.io/ipfs/QmWUYkiCYNbcCUy7JkR4ruZM8Ja6rJEVCKhVJZi5nKsyWZ">
+<img src="https://gateway.ipfs.io/ipfs/QmWUYkiCYNbcCUy7JkR4ruZM8Ja6rJEVCKhVJZi5nKsyWZ">
+<img src="https://gateway.ipfs.io/ipfs/QmWUYkiCYNbcCUy7JkR4ruZM8Ja6rJEVCKhVJZi5nKsyWZ">
 
 {% endblock %}
