fix api router for  eb health check

--- a/views/layout.html
+++ b/views/layout.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="../static/css/style.css" rel="stylesheet" type="text/css" />
+    <!-- <link href="../static/css/style.css" rel="stylesheet" type="text/css" /> -->
     <!-- <script type="text/javascript" src="../static/js/home.js"></script> -->
 </head>
 
 <body>
-    <div id="top">
+    <!-- <div id="top">
         <div id="title">
             <a href="#">title</a>
         </div>
@@ -29,7 +29,7 @@
             <a href="#">나의 대여 현황</a>
         </div>
 
-    </header>
+    </header> -->
     {% block content %}
 
     {% endblock %}
