--- a/views/layout.html
+++ b/views/layout.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <!-- <link href="../static/css/style.css" rel="stylesheet" type="text/css" /> -->
     <!-- <script type="text/javascript" src="../static/js/home.js"></script> -->
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 </head>
 
 <body>
