minting api router change to eb

--- a/views/minting.html
+++ b/views/minting.html
@@ -9,11 +9,17 @@
 </head>
 
 <body>
-    <form action="http://localhost:8080/v1/minting" method="post" enctype="multipart/form-data">
+    <form action="http://elasticnodenft-env.eba-n9dpj9pw.ap-northeast-2.elasticbeanstalk.com/v1/minting" method="post"
+        enctype="multipart/form-data">
         <input type="file" name="image" accept="image/*,video/*">
 
         <input type="submit" value="upload">
     </form>
+    <!-- <form action="http://localhost:8080/v1/minting" method="post" enctype="multipart/form-data">
+        <input type="file" name="image" accept="image/*,video/*">
+
+        <input type="submit" value="upload">
+    </form> -->
 </body>
 
 </html>
